# crisp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: basic.cmake  ide.cmake  utils.cmake
crisp/: CMakeLists.txt
crisp/app/: app.cpp  app.h  manager.cpp  manager.h  register.cpp  register.h
crisp/core/: crisp.cpp  crisp.h  database.h  register_template.h  version.h
crisp/device/: device.h  register.cpp  register.h
crisp/module/logo/: logo.cpp  logo.h
crisp/tinyfsm/: README.md  fsm.cpp  fsm.h
tests/: CMakeLists.txt  test_app_manager.cpp  test_app_register.cpp  test_crisp.cpp  test_device_register.cpp
